[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/fonts/Noto Sans UI/NotoSansUI-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://main menu/Level Button.gd" type="Script" id=2]
[ext_resource path="res://assets/button_icons/Delete Button/Delete_icon_pressed.svg" type="Texture" id=3]
[ext_resource path="res://assets/button_icons/Delete Button/Delete_icon_hover.svg" type="Texture" id=4]
[ext_resource path="res://assets/button_icons/Delete Button/Delete_icon.svg" type="Texture" id=5]

[sub_resource type="StyleBoxLine" id=4]
color = Color( 0.239216, 0.239216, 0.239216, 1 )
thickness = 2

[sub_resource type="DynamicFont" id=1]
size = 12
use_mipmaps = true
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="InputEventAction" id=2]
action = "delete"

[sub_resource type="ShortCut" id=3]
shortcut = SubResource( 2 )

[node name="Template" type="Button"]
margin_right = 326.0
margin_bottom = 142.0
rect_min_size = Vector2( 326, 142 )
size_flags_horizontal = 3
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 0.43
anchor_bottom = 1.0
margin_left = 3.38737
margin_top = 6.32253
margin_right = -8.79263
margin_bottom = -7.67747
mouse_filter = 2
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Description" type="Label" parent="."]
anchor_left = 0.43
anchor_right = 1.0
anchor_bottom = 0.957
margin_left = 0.119995
margin_top = 35.3874
margin_right = -7.37729
margin_bottom = 0.014389
custom_styles/normal = SubResource( 4 )
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 0.615686 )
autowrap = true
clip_text = true
max_lines_visible = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="Label" parent="."]
anchor_left = 0.43
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -1.18001
margin_top = 7.0
margin_right = -9.0
margin_bottom = -110.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="."]

[node name="Delete" type="TextureButton" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 5.82077
margin_top = -48.7312
margin_right = 45.8208
margin_bottom = -8.73117
focus_mode = 0
mouse_filter = 1
shortcut_in_tooltip = false
enabled_focus_mode = 0
shortcut = SubResource( 3 )
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 3 )
texture_hover = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="resized" from="." to="." method="_on_resized"]
[connection signal="pressed" from="Delete" to="." method="_on_Delete_pressed"]
